--- a/config.toml
+++ b/config.toml
@@ -9,6 +9,7 @@ parallel-jobs = 1
 [Spotify]
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 #archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.spotify.music"
+arch = "arm64-v8a"
 
 [Music]
 app-name = "Music"
