--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ uptodown-dlurl = "https://youtube.en.uptodown.com/android"
 enabled = true
 patches-source = "inotia00/revanced-patches"
 cli-source = "inotia00/revanced-cli"
-arch = "arm64-v8a"
+apkmirror-dpi = "120-640dpi"
 apkmirror-dlurl = "https://www.apkmirror.com/apk/redditinc/reddit/"
 
 [News]
