--- a/config.toml
+++ b/config.toml
@@ -10,8 +10,12 @@ parallel-jobs = 1
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 #archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.spotify.music"
 arch = "arm64-v8a"
+excluded-patches = """\
+  'Spoof client' \
+  """
 
 [Music]
+enabled = false
 app-name = "Music"
 #patches-source = "inotia00/revanced-patches"
 #cli-source = "inotia00/revanced-cli"
@@ -22,6 +26,7 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube-music"
 uptodown-dlurl = "https://youtube-music.en.uptodown.com/android"
 
 [YouTube]
+enabled = false
 app-name = "YouTube"
 #patches-source = "inotia00/revanced-patches"
 #cli-source = "inotia00/revanced-cli"
@@ -32,7 +37,7 @@ apkmirror-dlurl = "https://www.apkmirror.com/apk/google-inc/youtube"
 uptodown-dlurl = "https://youtube.en.uptodown.com/android"
 
 [Reddit]
-enabled = true
+enabled = false
 patches-source = "inotia00/revanced-patches"
 cli-source = "inotia00/revanced-cli"
 apkmirror-dpi = "120-640dpi"
