--- a/config.toml
+++ b/config.toml
@@ -7,12 +7,10 @@ parallel-jobs = 1
 # you can use rvmm-config-gen to generate a config
 
 [Spotify]
+enabled = false
 uptodown-dlurl = "https://spotify.en.uptodown.com/android"
 #archive-dlurl = "https://archive.org/download/jhc-apks/apks/com.spotify.music"
 arch = "arm64-v8a"
-excluded-patches = """\
-  'Spoof client' \
-  """
 
 [Music]
 #enabled = false
